# This project is designed to be built outside the Insight source tree.
PROJECT(VED)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

FIND_PACKAGE(ITK 4.10 REQUIRED)
INCLUDE(${ITK_USE_FILE})

FIND_PACKAGE( Boost 1.55.0 COMPONENTS program_options REQUIRED )
INCLUDE_DIRECTORIES( ${Boost_INCLUDE_DIR} )

# VED
ADD_EXECUTABLE(itkVEDMain itkVEDMain.cxx)
TARGET_LINK_LIBRARIES(itkVEDMain ${ITK_LIBRARIES} ${Boost_LIBRARIES})
